chore: adjust code for deploy on heroku

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon index.js"
+		"start": "node index.js",
+		"dev": "npx nodemon index.js"
 	},
 	"keywords": [],
 	"author": "",
